Adjust paragon condi builds

--- a/index.html
+++ b/index.html
@@ -151,26 +151,20 @@
             </p>
           </div>
 
-          <div class="accordion-header nested">1 Button Paragon Condi 31.5k <span class="arrow">▸</span></div>
+          <div class="accordion-header nested">1 Button Paragon Condi 32.7k <span class="arrow">▸</span></div>
           <div class="accordion-content nested">
-            <iframe data-src="https://www.youtube.com/embed/9Xb-hqyWRWs" frameborder="0" allowfullscreen></iframe>
+            <iframe data-src="https://www.youtube.com/embed/yZ71h2ceOm8" frameborder="0" allowfullscreen></iframe>
             <p class="build-description">
-              <strong>BUILD:</strong> <a
-                href="https://gw2skills.net/editor/?PKiAwylFwsYTMKWJO+K1zSA-DSJYmRD/ZEnCIXJgCPGckgYD8W09sCA-e (as of time of recording gw2 skills is outdated but take top middle trait in paragon)"
-                target="_blank">link</a><br>
-              <strong>ROTATION:</strong> F1 off cooldown. Opener is To The Limit into Chant of Action (for motivation,
-              read grandmaster trait in paragon) into F1.<br>
-              <strong>EXPLANATION:</strong> This is a beginner/low intensity warrior build for fractal/raid/strike
-              content.
+              <strong>BUILD:</strong> <a href="https://gw2skills.net/editor/?PKiAwylFwsYTMKWJO+K1zSA-DSJYmRD/ZEnCIXJgCPGckgYD8W09sCA-e" target="_blank">link</a><br>
+              <strong>ROTATION:</strong>
+              F1 off cooldown. Opener is To The Limit into Chant of Action (for motivation, read grandmaster trait in paragon) into F1.
 
-              Unsuspecting Foe yielded similar damage to blade master. I suspect you can push it a bit more if you take
-              off some expertise and swap to sinister and slot in blademaster. I could see it pushing 32k if you min
-              max. I could also see grieving + krait potentially outperforming since it's a single condition build.
-              However my general philosophy is that I try to make the gear as "generic" as possible so that you can
-              reuse that vipers/berserkers/whatever gear across other builds. So if you are new try to aim for full
-              vipers gear as that will be useful across other builds and classes.
+              If you ever drop below 7 motivation recast F2.<br>
+              <strong>EXPLANATION:</strong> This is a beginner/low intensity warrior build for fractal/raid/strike content.
 
-              I am just happy that condi warrior is now possible at lower intensity.
+              You can run full grieving and krait runes for a small damage boost (probably add on like 1k DPS). However if you are a new player and you are building out your first ascended set get viper's instead it is more useful across way more builds.
+              extra precision from Berserker's is unnecessary (make sure you are at 75% crit chance though with fury).
+              Up to you.
             </p>
           </div>
 
@@ -194,17 +188,20 @@
             </p>
           </div>
 
-          <div class="accordion-header nested">3 Button Paragon Condi 36.2k <span class="arrow">▸</span></div>
+          <div class="accordion-header nested">3 Button Paragon Condi 37.4k <span class="arrow">▸</span></div>
           <div class="accordion-content nested">
-            <iframe data-src="https://www.youtube.com/embed/1eGpoPBNQ-w" frameborder="0" allowfullscreen></iframe>
+            <iframe data-src="https://www.youtube.com/embed/lAXw5KXEVls" frameborder="0" allowfullscreen></iframe>
             <p class="build-description">
-              <strong>BUILD:</strong> <a href="https://gw2skills.net/editor/?PKiAwylFwsYTMKWJO+K9zSA-DSJYmRD/ZEnCIXJgCPGckgYD8W09sCA-e (ignore the wrong middle traits on the site take the top one/damage one in Paragon)
+              <strong>BUILD:</strong> <a href="https://gw2skills.net/editor/?PKiAwylFwsYTMKWJO+K9zSA-DSJYmRD/ZEnCIXJgCPGckgYD8W09sCA-e" target="_blank">link</a><br>
+              <strong>ROTATION:</strong>
+              F1 into Sword 3 into Sword 4. Cast after an auto attack. Opener is To The Limit into Chant of Action (for motivation, read grandmaster trait in paragon) into F1.
 
-Make sure to leave sword 4 inside the enemy (don't recast/yank it out)." target="_blank">link</a><br>
-              <strong>ROTATION:</strong> F1 into Sword 4 into Sword 3. Cast after an auto attack. Opener is To The Limit
-              into Chant of Action (for motivation, read grandmaster trait in paragon) into F1.<br>
-              <strong>EXPLANATION:</strong> This is a beginner/low intensity warrior build for fractal/raid/strike
-              content.
+              You can also finish auto chains for a very small damage boost. However this is a bit 'harder' to do, so it's not necessary.
+
+              If you ever drop below 7 motivation recast F2.
+
+              Make sure to leave sword 4 inside the enemy (don't recast/yank it out).<br>
+              <strong>EXPLANATION:</strong> This is a beginner/low intensity warrior build for fractal/raid/strike content.
             </p>
           </div>
 
@@ -255,27 +252,6 @@ Make sure to leave sword 4 inside the enemy (don't recast/yank it out)." target=
               You take river's flow to be able to 'afk' generate flow. Technically speaking you don't 'need' it so you
               can get a slightly higher dps number running Unseen Sword but it makes flow generation a lot tighter. I
               would just recommend River's Flow if you are a beginner.
-            </p>
-          </div>
-
-          <div class="accordion-header nested">4 Button Paragon Condi 38.1k <span class="arrow">▸</span></div>
-          <div class="accordion-content nested">
-            <iframe data-src="https://www.youtube.com/embed/nAF_GNJM9lM" frameborder="0" allowfullscreen></iframe>
-            <p class="build-description">
-              <strong>BUILD:</strong> <a href="https://gw2skills.net/editor/?PKiAwylFwqYTMKWJO+K+zSA-DSJYmRD/ZEnCIXJgCPGckgYD8W09sCA-e (ignore the wrong middle traits on the site take the top one/damage one in Paragon)
-
-Sorry I forgot I ran 2 sinisters pieces again. You can run full vipers the DPS will be same ish.
-
-Make sure to leave sword 4 inside the enemy (don't recast/yank it out)." target="_blank">link</a><br>
-              <strong>ROTATION:</strong> F1 into Sword 4 into Sword 3. Cast after an auto attack. Cast Signet of Stamina
-              off cool down (it has no cast time).
-
-              Opener is To The Limit into Chant of Action (for motivation, read grandmaster trait in paragon) into F1.
-
-              Make sure to precast 5 stacks of Signet of Ferocity outside of combat (precast your signets). Make sure
-              your power and accuracy signet are up though before combat.<br>
-              <strong>EXPLANATION:</strong> This is a beginner/low intensity warrior build for fractal/raid/strike
-              content.
             </p>
           </div>
 
