Update power Paragon builds

--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
       <div class="accordion-header">Warrior <span class="arrow">▸</span></div>
       <div class="accordion-content">
         <div class="accordion-item nested">
-          <div class="accordion-header nested">1 Button Paragon Power 31k <span class="arrow">▸</span></div>
+          <div class="accordion-header nested">1 Button Paragon Power 31.9k <span class="arrow">▸</span></div>
           <div class="accordion-content nested">
-            <iframe data-src="https://www.youtube.com/embed/3RQamzo3aPI" frameborder="0" allowfullscreen></iframe>
+            <iframe data-src="https://www.youtube.com/embed/vYa1DDOApmY" frameborder="0" allowfullscreen></iframe>
             <p class="build-description">
               <strong>BUILD:</strong> <a href="https://gw2skills.net/editor/?PKiAgelFwsYUsJWJO+K2zSA-DSIYR0wXGtlAVUA2en4IhxG4tExyGA-e" target="_blank">link</a><br>
               <strong>ROTATION:</strong> Spam f1. That's it.
@@ -283,9 +283,9 @@ You can take Vigorous Shouts (last trait line tactics) for more raw healing but 
             </p>
           </div>
 
-          <div class="accordion-header nested">5 Button Paragon Power 36.2k <span class="arrow">▸</span></div>
+          <div class="accordion-header nested">5 Button Paragon Power 37.5k <span class="arrow">▸</span></div>
           <div class="accordion-content nested">
-            <iframe data-src="https://www.youtube.com/embed/PTbsdQu5OEE" frameborder="0" allowfullscreen></iframe>
+            <iframe data-src="https://www.youtube.com/embed/z8rS5HFNnAA" frameborder="0" allowfullscreen></iframe>
             <p class="build-description">
               <strong>BUILD:</strong> <a
                 href="https://gw2skills.net/editor/?PKiAgelFwqYWsJWJO+K2zSA-DSIYR0wXG1mAVUA2en4IhxG4tExyGA-e"
@@ -299,11 +299,6 @@ You can take Vigorous Shouts (last trait line tactics) for more raw healing but 
               regain motivation.<br>
               <strong>EXPLANATION:</strong> This is a beginner/low intensity warrior build for fractal/raid/strike
               content.
-
-              Since snowcrows decided to bench power paragon (it's currently at ~40k) I decided to do post this low
-              intensity variant since it ends up kind of close to real bench. Also there was some kind in strikes
-              yesterday playing the SC build and his dps was below my friend who is brand new to guild wars lol. You
-              guys don't have to be afraid of playing these builds you will outperform like 80%+ in pugs very easily.
             </p>
           </div>
 
