--- a/index.html
+++ b/index.html
@@ -540,6 +540,22 @@ I was a dirty min maxer you don't need the two sinister pieces vipers is fine yo
             </p>
           </div>
         </div>
+
+        <div class="accordion-item nested">
+          <div class="accordion-header nested">3 Button Deadeye Condi 32.7k Realistic <span class="arrow">▸</span></div>
+          <div class="accordion-content nested">
+            <iframe data-src="https://www.youtube.com/embed/3fbx8LDB1XA" frameborder="0" allowfullscreen></iframe>
+            <p class="build-description">
+              <strong>BUILD:</strong> <a href="https://gw2skills.net/editor/?PaiAgilZwkYXMM2JO2W9vOA-DSJYmRD/ZUgCIOJgCPGckgYD8amxZFA-e" target="_blank">link</a><br>
+              <strong>ROTATION:</strong> Deadeye's mark into Dagger 3. Mercy once you trigger Maleficent Seven and run out of initiative to regain initiative and reset Maleficent Seven. Recast deadeye's mark but make sure you get back the initiative from it.<br>
+              <strong>EXPLANATION:</strong> This is a beginner/low intensity thief build for fractal/raid/strike content.
+              <br><br>
+              Realistic == 10 boons on you, 10 conditions on golem. You have traits that scale with number of boons on you and the number of conditions on golem.
+              <br><br>
+              It wasn't the cleanest run but it was the highest number I got. Also as a warning this one seems kind of dangerous to play since there is a lot of movement locks. Play at your own risk.
+            </p>
+          </div>
+        </div>
       </div>
     </div>
 
