--- a/index.html
+++ b/index.html
@@ -629,6 +629,18 @@ I was a dirty min maxer you don't need the two sinister pieces vipers is fine yo
             </p>
           </div>
 
+          <div class="accordion-header nested">5 Button Tempest Condi 32.4k <span class="arrow">▸</span></div>
+          <div class="accordion-content nested">
+            <iframe data-src="https://www.youtube.com/embed/suQDeIcF1UY" frameborder="0" allowfullscreen></iframe>
+            <p class="build-description">
+              <strong>BUILD:</strong> <a href="https://gw2skills.net/editor/?PGiEsEWGB7ipxqYk4o6Y2uA-DSJYmRD/ZEnCIEJgCPGckgYD8W09sCA-e"
+                target="_blank">link</a><br>
+              <strong>ROTATION:</strong> Precast elementals. Opener is Warhorn 5, Scepter 3, Signets, Overload Fire (F1).
+              The priority order is: F1, Scepter 3, Signet of Fire, Signet of Earth, Warhorn 5.<br>
+              <strong>EXPLANATION:</strong> This is a beginner/low intensity elementalist build for fractal/raid/strike content.
+            </p>
+          </div>
+
         </div>
       </div>
     </div>
