add 4 button condi fb

--- a/index.html
+++ b/index.html
@@ -423,6 +423,25 @@ I was a dirty min maxer you don't need the two sinister pieces vipers is fine yo
               build I have is just spam 2 signets off cooldown so I felt more comfortable with 4 buttoning that one).
             </p>
           </div>
+
+          <div class="accordion-header nested">4 Button Firebrand Condi 33.6k <span class="arrow">▸</span></div>
+          <div class="accordion-content nested">
+            <iframe data-src="https://www.youtube.com/embed/k68ziIo4_JE" frameborder="0" allowfullscreen></iframe>
+            <p class="build-description">
+              <strong>BUILD:</strong> <a
+                href="https://gw2skills.net/editor/?PWiAc+lJwgYdsK2JO8LavSA-DSJYmRD/ZkgEoDFgCPGckgYD8W09sCA-e"
+                target="_blank">link</a><br>
+              <strong>ROTATION:</strong> Opener: Purging Flames, Axe 2, Torch 4, spam all of your mantra of flame charges.
+              <br>
+              Basically combine Axe 2 with Torch 4 or Purging Flames with Torch 4. Spam mantra of flame off cooldown. Try to finish auto attack chains.
+              <br>
+              Priority: Purging Flames over Axe 2 when both available.
+              <br>
+              <strong>EXPLANATION:</strong> This is a beginner/low intensity guardian build for fractal/raid/strike content.
+              <br><br>
+              Throwing in Axe 3 and making it 5 button complicates the build with basically minimal DPS difference (only like 100-200 more from my testing). Just save Axe 3 for CC it will be more valuable there.
+            </p>
+          </div>
         </div>
       </div>
     </div>
